<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="Logining">登录中......</string>
    <string name="UMAppUpdate">应该更新</string>
    <string name="UMBreak_Network">更新失败,请确保已经连接到网络.</string>
    <string name="UMDialog_InstallAPK">最新版本已经下载完成,现在是否安装?</string>
    <string name="UMGprsCondition">(警告: 当前网络不是WIFI状态)</string>
    <string name="UMIgnore">忽略</string>
    <string name="UMNewVersion">最新版本:</string>
    <string name="UMNotNow">暂不</string>
    <string name="UMTargetSize">目标大小:</string>
    <string name="UMToast_IsUpdating">更新中......</string>
    <string name="UMUpdateCheck">2.6.0.1.20150312</string>
    <string name="UMUpdateContent">更新内容</string>
    <string name="UMUpdateNow">现在更新</string>
    <string name="UMUpdateSize">更新大小:</string>
    <string name="UMUpdateTitle">发现新版本</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">约</string>
    <string name="access_notification_tips">去设置获取通知的权限。如果您已经开启权限，请重启手机。</string>
    <string name="access_notification_tips_title">获取通知</string>
    <string name="accessibility_label">WeLoop通知</string>
    <string name="accessibility_query_window_description">WeLoop获取通知服务</string>
    <string name="account_bind">账号绑定</string>
    <string name="account_empty">输入账号不能为空</string>
    <string name="account_there">账号已存在</string>
    <string name="action_settings">设置</string>
    <string name="activation_msg">您的%1$s，ID：%2$s已激活，从今天开始我们将为您提供长达一年的保修服务，点击“了解更多”查看保修条款</string>
    <string name="active_days">活跃天数</string>
    <string name="active_point">活跃点</string>
    <string name="activities">活动</string>
    <string name="activityPoint">活跃点</string>
    <string name="activity_point">活跃点</string>
    <string name="activity_points">活跃点数</string>
    <string name="add_app">添加推送应用</string>
    <string name="add_device">添加设备</string>
    <string name="add_favorite">收藏</string>
    <string name="add_friend">添加好友</string>
    <string name="add_friends_tips">输入好友昵称/手机号/设备ID</string>
    <string name="add_success">添加成功</string>
    <string name="aggred_request">已同意好友请求</string>
    <string name="agree">同意</string>
    <string name="agreed">已同意</string>
    <string name="alarm">闹钟</string>
    <string name="alarm_title">日常闹钟</string>
    <string name="alread_find_phone">已找到手机</string>
    <string name="already_add">已添加</string>
    <string name="already_apply">已申请</string>
    <string name="already_find_phone">已找到手机</string>
    <string name="already_ignore">已忽略</string>
    <string name="already_send">已发送</string>
    <string name="amateur_player">业余选手</string>
    <string name="amount_exericise">运动量</string>
    <string name="anti_disturb">夜间勿扰</string>
    <string name="anti_disturb_end">结束于</string>
    <string name="anti_disturb_first_day">首日</string>
    <string name="anti_disturb_model">勿扰模式</string>
    <string name="anti_disturb_next_day">次日</string>
    <string name="anti_disturb_start">开始于</string>
    <string name="anti_lost">手机防丢</string>
    <string name="antlost_tips">"手机系统蓝牙连接不稳定时，
手机防丢功能将会产生误报     "</string>
    <string name="apk_version">版本: %s</string>
    <string name="app_name">WeLoop</string>
    <string name="app_settrings">应用设置</string>
    <string name="app_update_now">马上升级</string>
    <string name="april">四月</string>
    <string name="august">八月</string>
    <string name="auth_failed">授权失败</string>
    <string name="auto_sync_data">自动同步</string>
    <string name="auto_sync_msg">保持手机与设备之间连接，每4小时将自动同步数据至app</string>
    <string name="average_calorie">平均每日消耗</string>
    <string name="average_daily_calories">日平均大卡</string>
    <string name="average_distance">平均距离</string>
    <string name="average_step_count">平均步数</string>
    <string name="awake_time">清醒时间</string>
    <string name="back">返回</string>
    <string name="back_light">背光显示</string>
    <string name="bang_failed">绑定失败</string>
    <string name="base_settings">基本设置</string>
    <string name="be_apply">申请加您为好友</string>
    <string name="be_rejected">被拒绝</string>
    <string name="be_rejected_request">拒绝您的好友请求</string>
    <string name="be_your_friend">已成为您的好友</string>
    <string name="befor_week_str">前%1$d周</string>
    <string name="best_date">最佳日</string>
    <string name="best_week">最佳周</string>
    <string name="bike">自行车</string>
    <string name="bindAccount">账号绑定</string>
    <string name="bind_device">绑定设备</string>
    <string name="bind_failed">绑定失败</string>
    <string name="bind_now">立即绑定</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="bind_success">绑定成功</string>
    <string name="binded">已绑定</string>
    <string name="binding">绑定中..</string>
    <string name="binding_device">正在绑定设备%s…</string>
    <string name="birth">出生年</string>
    <string name="ble_connected">已连接</string>
    <string name="ble_diconnect">蓝牙断开，停止录像</string>
    <string name="ble_disconnected">未连接</string>
    <string name="ble_list">蓝牙列表</string>
    <string name="bluetooth_is_close">手机蓝牙未打开</string>
    <string name="btn_recover_font">恢复字库</string>
    <string name="bus">交通工具</string>
    <string name="calendar_dash">—</string>
    <string name="calendar_day">日</string>
    <string name="calendar_month">月</string>
    <string name="calendar_year">年</string>
    <string name="calorie">大卡</string>
    <string name="calories">大卡</string>
    <string name="camera_control">相机控制</string>
    <string name="can_not_receive_code"><u>收不到验证码?</u></string>
    <string name="cancel">取消</string>
    <string name="charging">充电</string>
    <string name="check_code_invalid">验证码失效</string>
    <string name="check_code_not_empty">验证码不能为空</string>
    <string name="check_code_sended">验证码已发送</string>
    <string name="check_code_wrong_prompt">验证码不正确或验证码已过期</string>
    <string name="check_token_fail">检测状态失败</string>
    <string name="check_token_fail_check_net">检测状态失败，请检查网络连接</string>
    <string name="check_token_fail_server_error">检测状态失败,服务器异常</string>
    <string name="checkcode_error">验证码错误</string>
    <string name="checking">验证中...</string>
    <string name="checking_state">正在检测状态</string>
    <string name="checking_version">正在检测版本…</string>
    <string name="choice_day_alarm">"请点选闹钟周期,
以设置您所需要的重复次数"</string>
    <string name="close">关闭</string>
    <string name="code_wrong">验证码输入错误</string>
    <string name="coming_function">功能完善中</string>
    <string name="commiting">提交中</string>
    <string name="compare_last_month">相比上月</string>
    <string name="compare_last_week">相比上周</string>
    <string name="competition_compete">竞赛比拼</string>
    <string name="comple">完成</string>
    <string name="completeness">完成度</string>
    <string name="confirm_passwrod">确认密码</string>
    <string name="confirm_upload">取消问题反馈</string>
    <string name="connect_device_confirm_msg">确认需要与ID %1$s配对</string>
    <string name="connect_notification">连接通知</string>
    <string name="connect_prompt">请连接设备</string>
    <string name="connecting_to_device_detial">正在连接%s</string>
    <string name="consume">消耗</string>
    <string name="crash_dialog_comment_prompt">可以在此给出你的意见：</string>
    <string name="crash_dialog_ok_toast">谢谢！</string>
    <string name="crash_dialog_text">遇到未知错误导致WeoLoop程序崩溃。请发送错误报告给我们，帮助修改问题。 如果愿意，请点击确定就可以了。</string>
    <string name="crash_dialog_title">WeLoop已崩溃</string>
    <string name="crash_toast_text">坑啊! WeLoop崩溃了。发送崩溃报告给开发者，帮助修复问题!</string>
    <string name="cur_complete">已完成</string>
    <string name="current_version">当前版本 %s</string>
    <string name="current_version_profix">当前版本</string>
    <string name="daily_average_sleep_time">日平均睡眠时间</string>
    <string name="daily_no_activity">暂无活动</string>
    <string name="daily_point_str">点数</string>
    <string name="daily_step_str">步数</string>
    <string name="december">十二月</string>
    <string name="deep_sleep_time">深睡时间</string>
    <string name="del_failed">删除失败</string>
    <string name="del_friend">删除好友</string>
    <string name="del_friend_failed">删除好友失败</string>
    <string name="del_success">删除成功</string>
    <string name="del_success_friend">删除好友成功</string>
    <string name="delete">删除</string>
    <string name="deleted">已删除</string>
    <string name="deleteing">删除中...</string>
    <string name="description_now">独具科技感个性外观，USB快捷充电，自动识别日常运动类型，来电提醒消息显示。</string>
    <string name="description_nowc">经典百搭设计，使手环成为时尚配件，兼具实用日常记录与手机消息提醒功能。</string>
    <string name="description_tommy">来电提醒，显示消息内容，让你每天少掏手机100次。50米防水，可靠耐用。</string>
    <string name="description_tommy2">简单设计，真正实用的智能手表。</string>
    <string name="device_change">设备切换</string>
    <string name="device_disconnect_remind">设备连接中断，请重连设备后同步数据</string>
    <string name="device_display_prefix_now">Now</string>
    <string name="device_display_prefix_now_classic">Now Classic</string>
    <string name="device_display_prefix_tommy">小黑</string>
    <string name="device_display_prefix_tommy2">小黑2</string>
    <string name="device_is_busy">设备正忙</string>
    <string name="device_language">手表语言</string>
    <string name="device_more">更多产品</string>
    <string name="device_name">设备</string>
    <string name="device_name_profix">Now</string>
    <string name="device_name_profix2">Now CLASSIC</string>
    <string name="device_searching">设备搜索中…</string>
    <string name="device_settings">设备</string>
    <string name="device_unconnected">设备未连接</string>
    <string name="device_uniit_wati">设备初始化未完成，请稍后…</string>
    <string name="device_version_format">设备的版本: %s</string>
    <string name="device_weloop_product">WeLoop产品</string>
    <string name="dfu_button_label_cancel">取消扫描</string>
    <string name="dfu_no_sensor_found">"扫描中…
未发现设备!"</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_ok">确定</string>
    <string name="disconnect_binding">解除绑定</string>
    <string name="disconnect_device">解除设备绑定</string>
    <string name="disconnect_device_msg">确认解除设备绑定?</string>
    <string name="disconnect_str">设备未连接,请连接上设备后重试</string>
    <string name="disconnected">未连接</string>
    <string name="distance">距离(公里)</string>
    <string name="distance_km">距离(公里)</string>
    <string name="disturb_all_day">全天勿扰</string>
    <string name="exit_alarm_edit">确定不保存闹钟设置并返回</string>
    <string name="finished">完成</string>
    <string name="item_distance">距离</string>
    <string name="item_speed">速度</string>
    <string name="loading_watchface_info_in_watch">正在获取手表表盘信息…</string>
    <string name="problem_description">问题描述</string>
    <string name="problem_hint_content">描述您所遇到的问题详情，更有助于我们解决问题，您也可以直接发送反馈日志，该信息将以匿名方式收集。</string>
    <string name="select_one_watchface_to_replace">选择需要替换的表盘</string>
    <string name="send_wrong_log">问题反馈</string>
    <string name="steps">步数</string>
    <string name="sure">确认</string>
    <string name="sync_fail">同步失败</string>
    <string name="synchronize">同步</string>
    <string name="synchronizing">同步中…</string>
    <string name="upload">发送</string>
</resources>