<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/alert_find_bg" android:layout_width="-1" android:layout_height="-2">
    <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:textSize="20sp" android:textColor="@color/white" android:gravity="11" android:id="@id/rv_tv_msg" android:visibility="0" android:layout_width="-1" android:layout_height="70dp" android:text="@string/exit_alarm_edit" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    <View android:id="@id/ad_view_line" android:background="@color/white" android:layout_width="-1" android:layout_height="1dp" android:layout_marginTop="10dp" android:layout_below="@id/rv_tv_msg" />
    <LinearLayout android:orientation="0" android:id="@id/ad_ll_btns" android:layout_width="-1" android:layout_height="55dp" android:layout_below="@id/ad_view_line" android:layout_centerHorizontal="true">
        <Button android:textSize="22sp" android:textColor="@color/white" android:id="@id/rv_tv_cancel" android:background="@styleable/View_android_theme" android:layout_width="-1" android:layout_height="-1" android:text="@string/cancel" android:layout_weight="1.0" />
        <View android:id="@id/ad_view_ver_line" android:background="@color/white" android:layout_width="1dp" android:layout_height="-1" android:layout_above="@id/ad_ll_btns" />
        <Button android:textSize="22sp" android:textColor="@color/white" android:id="@id/rv_tv_sure" android:background="@styleable/View_android_theme" android:layout_width="-1" android:layout_height="-1" android:text="@string/sure" android:layout_weight="1.0" />
    </LinearLayout>
</RelativeLayout>
